# tollbooth_etc_mx

./: .gitignore  README.md  area_operators_mx.csv  create_data.sh  inflation_rate.ipynb  plazas_de_cobro.csv  pyproject.toml  resources.csv  schemas.py  strechs-tariffs.csv  strechs-tolls.csv  tollbooths_mx.csv
.claude/commands/: scrape-tarifas.md
data/: tarifas_with_stretch_id.csv
data/pub/2022/: stretchs_toll.csv
data/pub/2024/: stretchs_toll.csv  tollbooths.csv
data/pub/2025/: roads.csv  stretchs.csv  (+2 more)
data/raw/: strechs-tolls.csv
data/tables/: area_operators_mx.csv  roads.csv  strech_tb_id_full_test.csv  strechs-tolls-2021.csv  strechs-tolls-2022.csv  strechs-tolls-2023.csv  strechs-tolls-2024.csv  strechs-tolls-2025.csv  strechs.csv  strechs_catalog.csv  strechs_tollbooth_id.csv  tb_strech.csv  tb_strech_id.csv  tb_strech_id_empty.csv  tb_tbsts.csv  tbsts_strech.csv  tollbooths.csv  tollbooths_catalog.csv  tollbooths_mx.csv  tollbooths_sts.csv
docs/pipeline/: doc_prompt  generate.py  memory.md  pipeline.html  pipeline.json
pipeline/: run.py
pipeline/flows/: report_flow.py  staging_flow.py
pipeline/tasks/: cluster_tasks.py  report_tasks.py  stage_tasks.py
scripts/: catalogs.py  create_data.sh  dataset_summary.py  dv_cleaner.py  imt_to_model.py  join_tollbooths.py  match_tarifas_to_stretch.py  parse_tarifas.py  populate_db.py  reports.py  schemas.py  stage.py  tarifas_to_columnar.py  toll_inflation_rate.py  tollbooth_cluster.py
src/: data_files.py  data_pipeline.py  main.py  model.py
src/pipeline/: run.py
src/scripts/: dataset_summary.py  dv_cleaner.py  imt_to_model.py  join_tollbooths.py  match_tarifas_to_stretch.py  pase_toll_cleaner.py  populate_db.py  reports.py  stage.py  tarifas_to_columnar.py  tollbooth_cluster.py
src/tests/: test_pipeline_flows.py  test_query_parser.py  test_schema.py
src/utils/: connector.py  df_eval.py  query_parser.py  tools.py
tb_map_editor/: data_files.py  main.py  model.py  pipeline.py  schemas.py
tb_map_editor/scripts/: schemas.py
tb_map_editor/templates/: map.html
tb_map_editor/utils/: connector.py  query_parser.py  tools.py
tests/: test_query_parser.py  test_schema.py
(+36 files in other folders)
