[project]
name = "tollbooth_etc_mx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adbc-driver-sqlite>=1.9.0",
    "fastapi[standard]>=0.124.4",
    "jinja2>=3.1.6",
    "markitdown[pdf]>=0.1.5",
    "pdfplumber>=0.11.8",
    "polars>=1.34.0",
    "polars-ds>=0.10.4",
    "polars-h3>=0.6.1",
    "prefect>=3.7.0",
    "pydantic>=2.9",
    "pytest>=9.0.2",
    "rapidfuzz>=3.14.5",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "scipy>=1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["src/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modern Python syntax)
    "B",   # flake8-bugbear (common bugs)
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # function calls in default args (common in FastAPI/Prefect)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
